# Scope

scopex/: CMakeLists.txt  DFTChart.qml  Main.qml  ScopeChart.qml  main.cpp  resources.qrc  serialhandler.cpp  serialhandler.h
